<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="paired_devices">Paired devices</string>
    <string name="app_name">Text Data Test</string>
    <string name="action_settings">Settings</string>
    <string name="text_data">Text data</string>
    <string name="escape_sequences">Escape sequences</string>
    <string name="add">Add</string>
    <string name="print">Print</string>
    <string name="data">BIXOLON is the best choice when it comes to our products as well as lifelong business partners.\n\n</string>

    <string-array name="escape_sequences">
        <item>Normal</item>
        <item>Font A (12x24)</item>
        <item>Font B (9x17)</item>
        <item>Font C (9x24)</item>
        <item>Left justify</item>
        <item>Center</item>
        <item>Right justify</item>
        <item>Bold</item>
        <item>Disabled bold</item>
        <item>Underline</item>
        <item>Disabled underline</item>
        <item>Reverse video</item>
        <item>Disabled reverse video</item>
        <item>Single high and wide</item>
        <item>Double wide</item>
        <item>Double high</item>
        <item>Double high and wide</item>
        <item>Scale 1 time horizontally</item>
        <item>Scale 2 times horizontally</item>
        <item>Scale 3 times horizontally</item>
        <item>Scale 4 times horizontally</item>
        <item>Scale 5 times horizontally</item>
        <item>Scale 6 times horizontally</item>
        <item>Scale 7 times horizontally</item>
        <item>Scale 8 times horizontally</item>
        <item>Scale 1 time vertically</item>
        <item>Scale 2 times vertically</item>
        <item>Scale 3 times vertically</item>
        <item>Scale 4 times vertically</item>
        <item>Scale 5 times vertically</item>
        <item>Scale 6 times vertically</item>
        <item>Scale 7 times vertically</item>
        <item>Scale 8 times vertically</item>
    </string-array>

</resources>